# BaseCom

./: CMakeLists.txt  README.md  vcpkg.json
include/BaseCom/: BaseCom.h  BaseComDefs.h
include/BaseComInternal/: dynlib.h  flowctrl.h
src/: CMakeLists.txt
src/dynlib/: CMakeLists.txt  dynlib_unix.cpp  dynlib_windows.cpp
test/: CMakeLists.txt
test/dynlibtest/: CMakeLists.txt  dynlibtest.cpp  testdynlib.c
